--- a/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/organisators.html
@@ -494,7 +494,7 @@
             </div>
             <div class="row">
 
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
@@ -512,8 +512,25 @@
                     </div>
                 </div>
 
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/sticker-center.png" alt="Sticker Center Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://stickercenter.net/"><i class="fa fa-meetup"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Sticker Center</a></h5>
+                        </div>
+                    </div>
+                </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
@@ -528,7 +545,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
@@ -541,7 +558,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a>Malzeme Bilimleri Kulübü</a></h5>
+                            <h6><a>Malzeme Bilimleri Kulübü</a></h6>
                         </div>
                     </div>
                 </div>
@@ -599,6 +616,25 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/temiz-is.png" alt="Temiz İş Ofset & Dijital Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.temizisofset.com.tr/index.php"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Temiz İş Ofset & Dijital </a></h5>
+                        </div>
+                    </div>
+                </div>
+
 
 
                 <div class="col-lg-4 col-md-4 col-sm-6">
