--- a/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/index.html
@@ -2,6 +2,15 @@
 <html lang="tr">
 <head>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WVLWDTDL2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1WVLWDTDL2');
+</script>
     <!-- SITE TITTLE -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -498,7 +507,7 @@
 
                         <tr>
                             <th scope="row">10.30</th>
-                            <td>Bilişimde ve Matematikte Kadınlar Fikir Annesi</td>
+                            <td>Bilişimde ve Matematikte Kadın Olmak</td>
                             <td>Ezgi Erdem Aytaç</td>
 
                         </tr>
@@ -692,6 +701,7 @@
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
 
+
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p>Etkinlik Mekan Sponsoru</p>
@@ -701,6 +711,18 @@
                                     </a>
                                 </div>
                             </li>
+
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p>Etkinlik Kahve Sponsoru</p>
+                                    <p><b>Colombia Coffee Türkiye</b></p><br />
+                                    <a target="_blank" href="https://www.colombiacoffeetr.com.tr/">
+                                        <img src="images/sponsors/colombia.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
 
                         </ul>
 
@@ -712,6 +734,19 @@
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
+
+
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Eskişehir Büyükşehir Belediyesi</b></p><br />
+                                    <a target="_blank" href="https://www.eskisehir.bel.tr/">
+                                        <img src="images/sponsors/buyuksehir.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
+
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p><b>Charlie's Friends</b></p><br />
@@ -739,8 +774,25 @@
                                 </div>
                             </li>
 
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Temiz İş Ofset & Dijital</b></p><br />
+                                    <a href="https://www.temizisofset.com.tr/index.php">
+                                        <img src="images/sponsors/temiz-is.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
 
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Sticker Center</b></p><br />
+                                    <a href="https://stickercenter.net/">
+                                        <img src="images/sponsors/sticker-center.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
 
+                         
                         </ul>
 
                     </div>
