--- a/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/organisators.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WVLWDTDL2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1WVLWDTDL2');
+</script>
 
     <!-- SITE TITTLE -->
     <meta charset="utf-8">
@@ -512,23 +521,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <!-- Speaker 1 -->
-                    <div class="speaker-item">
-                        <div class="image">
-                            <img src="images/sponsors/sticker-center.png" alt="Sticker Center Fotoğraf" class="img-fluid">
-                            <div class="primary-overlay"></div>
-                            <div class="socials">
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://stickercenter.net/"><i class="fa fa-meetup"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content text-center">
-                            <h5><a>Sticker Center</a></h5>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
@@ -559,6 +552,24 @@
                         </div>
                         <div class="content text-center">
                             <h6><a>Malzeme Bilimleri Kulübü</a></h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/etiya.png" alt="Etiya Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.etiya.com/tr"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Etiya</a></h5>
                         </div>
                     </div>
                 </div>
@@ -617,24 +628,6 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <!-- Speaker 1 -->
-                    <div class="speaker-item">
-                        <div class="image">
-                            <img src="images/sponsors/temiz-is.png" alt="Temiz İş Ofset & Dijital Fotoğraf" class="img-fluid">
-                            <div class="primary-overlay"></div>
-                            <div class="socials">
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://www.temizisofset.com.tr/index.php"><i class="fa fa-laptop"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content text-center">
-                            <h5><a>Temiz İş Ofset & Dijital </a></h5>
-                        </div>
-                    </div>
-                </div>
-
 
 
                 <div class="col-lg-4 col-md-4 col-sm-6">
@@ -651,6 +644,99 @@
                         </div>
                         <div class="content text-center">
                             <h5><a>Mühendislik Projeleri Geliştirme Kulübü</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/bbtk.png" alt="Bilgisayar ve Bilişim Teknolojileri Kulübü Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://ceng.ogu.edu.tr/Haber/Detay/13/esogu-bilgisayar-ve-bilisim-teknolojileri-kulubu-2018"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Bilgisayar ve Bilişim Teknolojileri Kulübü</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/estogu.jpeg" alt="Osmangazi Üniversitesi Toplum Gönüllüleri Topluluğu Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.instagram.com/es.togu/"><i class="fa fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Osmangazi Üniversitesi Toplum Gönüllüleri Topluluğu</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/anadolutog.png" alt="Osmangazi Üniversitesi Toplum Gönüllüleri Topluluğu Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.tog.org.tr/"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Anadolu Üniversitesi Toplum Gönüllüleri Topluluğu</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/ogupsikoloji.png" alt="Osmangazi Üniversitesi Psikoloji Topluluğu"<" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://psikoloji.ogu.edu.tr/Haber/Detay/22/esogu-psikoloji-toplulugu-kuruldu"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Osmangazi Üniversitesi Psikoloji Topluluğu</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/ogusinema.png" alt="Oinema Osmangazi Topluluğu Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://psikoloji.ogu.edu.tr/Haber/Detay/23/sinema-osmangazi-toplulugu-kuruldu"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Sinema Osmangazi Topluluğu</a></h5><br>
                         </div>
                     </div>
                 </div>
