--- a/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/index.html
@@ -453,6 +453,7 @@
                     </div>
                 </div>
 
+
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
 
@@ -495,24 +496,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row">10.00</th>
-                            <td>Kayıt</td>
+                            <th scope="row">10.00-10.15</th>
+                            <td>Kayıt & Kahvaltı</td>
 
                         </tr>
                         <tr>
-                            <th scope="row">10.15</th>
+                            <th scope="row">10.15-10.45</th>
                             <td>Açılış Konuşmaları</td>
+                            <td>Ayşe Ünlüce, Ezgi Erdem Aytaç</td>
 
                         </tr>
 
                         <tr>
-                            <th scope="row">10.30</th>
-                            <td>Bilişimde ve Matematikte Kadın Olmak</td>
-                            <td>Ezgi Erdem Aytaç</td>
-
-                        </tr>
-                        <tr>
-                            <th scope="row">10.45</th>
+                            <th scope="row">10.45-11.30</th>
                             <td>
                                 Fireside Chat: Bilişim Alanında Farklı Kariyer Yolculukları -
                                 Teknoloji Alanında, Bilgisayar Mühendisliğinden Farklı Alanlara Uzanan Yolculuklar
@@ -527,19 +523,16 @@
                         </tr>
 
                         <tr>
-                            <th scope="row">11:40</th>
+                            <th scope="row">11:30-11.45</th>
                             <td>
-                                Kahve Arası  & Nefes Molası, 15 dakikalık desk yoga ve nefes meditasyonu
+                                Kahve Arası  & Nefes Molası
                             </td>
 
-                            <td>
-                                Burcu Karakurt Gün
-                            </td>
 
                         </tr>
 
                         <tr>
-                            <th scope="row">12.00</th>
+                            <th scope="row">11.45-12.15</th>
                             <td>
                                 Oyun Sektöründeki Gelişmeler ve Oyun Sektöründe Kariyer Olanakları
                             </td>
@@ -549,7 +542,27 @@
                         </tr>
 
                         <tr>
-                            <th scope="row">12.30</th>
+                            <th scope="row">12:15-12.45</th>
+                            <td>
+                                15 dakikalık desk yoga ve nefes meditasyonu
+                            </td>
+
+                            <td>
+                                Burcu Karakurt Gün
+                            </td>
+
+                        </tr>
+
+
+                        <tr>
+                            <th scope="row">12.45-13.30</th>
+                            <td>
+                                Öğle Arası
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <th scope="row">13.30-14.15</th>
                             <td>
                                 Fireside Chat: Bilişim Alanında Tasarım, Proje ve Ürün Yönetimi Kariyer Yolculuğu
                             </td>
@@ -563,14 +576,14 @@
                         </tr>
 
                         <tr>
-                            <th scope="row">13.15</th>
+                            <th scope="row">14.15-14.30</th>
                             <td>
-                                Öğle Arası
+                                Kahve Molası
                             </td>
                         </tr>
 
                         <tr>
-                            <th scope="row">14.00</th>
+                            <th scope="row">14.30-15.00</th>
                             <td>
                                 Matematiksel Hayat Becerisi
                             </td>
@@ -578,15 +591,10 @@
                                 Burcu Haboğlu Baba
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">14.40</th>
-                            <td>
-                                Kahve Molası
-                            </td>
-                        </tr>
+
 
                         <tr>
-                            <th scope="row">14.50</th>
+                            <th scope="row">15.00-15.30</th>
                             <td>
                                 Finans Alanında Kariyer Yolculuğu ve Öğrenciler için Yatırım Önerileri
                             </td>
@@ -595,7 +603,7 @@
                             </td>
                         </tr>
 
-                        <tr>
+                        <!--<tr>
                             <th scope="row">15.40</th>
                             <td>
                                 Kariyer Değişikliği Her Zaman Mümkün:
@@ -604,22 +612,14 @@
                             <td colspan="1">
                                 Sürpriz Sanatçı & Girişimci :)
                             </td>
-                        </tr>
+                        </tr>-->
 
                         <tr>
-                            <th scope="row">16.00</th>
+                            <th scope="row">15.30-15.45</th>
                             <td>
-                                Konser & Networking
+                                Kahve Molası
                             </td>
                         </tr>
-
-                        <tr>
-                            <th scope="row">16.30</th>
-                            <td>
-                                Kapanış
-                            </td>
-                        </tr>
-
 
                     </tbody>
                 </table>
@@ -654,9 +654,9 @@
             <div class="row">
                 <div class="col-12">
                     <!-- Title -->
-                    <div class="sponsor-title text-center">
+                    <!--<div class="sponsor-title text-center">
                         <h5>Platinum Sponsorlar</h5>
-                    </div>
+                    </div>-->
 
 
                     <div class="block text-center">
@@ -790,7 +790,7 @@
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p><b>Argons Tasarım Ofisi</b></p><br />
-                                    <a href="#">
+                                    <a href="https://www.google.com/maps/place/Argons+Tasar%C4%B1m+Ofisi/@39.762078,30.4991442,15z/data=!4m2!3m1!1s0x0:0x8f7de372c0905fb6?sa=X&ved=1t:2428&ictx=111">
                                         <img src="images/sponsors/argontasarim.png" alt="sponsors-logo">
                                     </a>
                                 </div>
@@ -847,7 +847,16 @@
                                     </a>
                                 </div>
                             </li>
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Cyberexam</b></p><br />
+                                    <a target="_blank" href="https://cyberexam.io/">
+                                        <img src="images/sponsors/cyberexam.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
 
+                            <div></div>
                         </ul>
 
                     </div>
@@ -874,14 +883,42 @@
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p><b>Mobillium</b></p><br />
-                                    <a target="_blank" href="">
+                                    <a target="_blank" href="https://www.mobillium.com/">
                                         <img src="images/sponsors/mobillium.jpg" alt="sponsors-logo">
                                     </a>
                                 </div>
                             </li>
+
+                          
                         </ul>
 
                     </div>
+
+                    <!-- Çekiliş Sponsoru-->
+
+                    <div class="sponsor-title text-center">
+                        <h5>Çekiliş Sponsorları</h5>
+                    </div>
+                    <div class="block text-center">
+                        <ul class="list-inline sponsors-list">
+
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Witches Hallow</b></p><br />
+                                    <a target="_blank" href="https://store.steampowered.com/app/2545340/Witches_Hallow/">
+                                        <img src="images/sponsors/witches.jpg" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
+
+
+                        </ul>
+
+                    </div>
+
+
 
                     <div class="sponsor-btn text-center">
                         <p><a href="mailto:ezgi@gingain.com" class="btn btn-main-md">Sponsor olun!</a><br /></p>
