--- a/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/organisators.html
@@ -165,6 +165,25 @@
                     </div>
                 </div>
 
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/speakers/damla-kilic.jpg" alt="Organizatör Damla Gedikli Kılıç Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/damlagedikli/"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Damla Gedikli Kılıç</a></h5>
+                            <p><b>Sr. Product Manager - Grubtech</b></p><br />
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
             <br /><br />
@@ -382,29 +401,7 @@
                 </div>
 
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <!-- Speaker 1 -->
-                    <div class="speaker-item">
-                        <div class="image">
-                            <img src="images/speakers/melih-uslu.jpg" alt="Melih Uslu Fotoğraf" class="img-fluid">
-                            <div class="primary-overlay"></div>
-                            <div class="socials">
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/melih-uslu-833546255/"><i class="fa fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content text-center">
-                            <h5><a>Melih Uslu</a></h5>
-                            <p>
-                                <b>
-                                    Eskişehir Osmangazi Üniversitesi, Endüstri Mühendisliği Öğrencisi,
-                                    GDSC Core Team
-                                </b>
-                            </p><br />
-                        </div>
-                    </div>
-                </div>
+            
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
